# sqlite-meson-demo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  compile.sh  main.cpp  meson.build
.github/workflows/: release.yml
lib/: CMakeLists.txt
lib/sqlite/: driver.hpp  meson.build
scripts/: lkg-demo.db  lkg_library.db  profiling.sh  snapshot.sh  snapshot_db.sh
src/: main.cpp  sqlite3_wrapper.hpp
src/models/: country.hpp
tests/: client_test.cpp
